//#====================================================#
//# Last update:
//
// 17 Mar 2010: small correction (h_QCDest_isoVmet_NES_barrel/endcap not filled).
// 16 Mar 2010: clean up, small correction.
// 15 Mar 2010: - take out redundant weight parameter in fillHistoDataAndMC().
//              - revise. review QCD plot making.
// 14 Mar 2010: - change histo array to vector. Add BookHistograms() suite.
//              - Revert all short to int to optimize code.
//              - remove doValidaion(), replaced with m_doValidation.
//              - add switch StudyZveto (D=on).
//
// 12 Mar 2010: fix small bug.
// 11 Mar 2010: replace 3D arrays (e_plus_jet & e_plus_jets_weighted) with 
//              private vectors. Simplify and imporve codes.
//
//  9 Mar 2010: - Adapt to accommodate tt0j-tt4j alpgen signal samples. 
//              - Add methods: DefineCrossSectionAlpgen7TeV, DrawTTnjetTable.
//              - Consistent use of GetNinit() & GetCrossSection().
//              - Remove old logs, keep only this year's.
//
//  3 Mar 2010: add DPhiMetJet, genMET plots.
// 25 Feb 2010: add Data_njetsVcuts TH2.
// 23 Feb 2010: fix nstage (16->13).
// 22 Feb 2010: add barrel/endcap plots for iso-met scatter plot (in NES).
// 17 Feb 2010: fix btag plot. Replace nGoodJet & Njet() with m_nGoodJet.
// 16 Feb 2010: Add SC6 and KT7. Add btag plots. Take out HT cut. Fix ("nfile =" -> "nfile +=").
//
// 15 Feb 2010: - MCTruthMAtch, change iniital value of ii from -1 to 0. 
//              - Small update in DrawSignalBGTable. Add global const ncutshown.
//
// 12 Feb 2010: - Add PDF weights. Add method to set HLT bit from script. Clean up.
//              - Remove unused mc_electron and mc_muons from branch list.
//              - Remove debug(),jetAlgo() etc (replaced with m_debug etc).
//              - Add method CheckAvailableJetMET().
//              - Update 7 TeV cross section.
//        